docs/sf-export/sfdx-raw/objects/Agent_Weekly_Payroll__c/Agent_Weekly_Payroll__c.object-meta.xml
<CustomObject>
    <label>Agent Weekly Payroll</label>
    <nameField>
        <displayFormat>AWP-{000000}</displayFormat>
        <label>Agent Weekly Payroll Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Weekly Payrolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>