docs/sf-export/sfdx-raw/objects/Agent_Weekly_Payroll__c/fields/Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Status__c</fullName>
    <label>Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>