docs/sf-export/sfdx-raw/objects/Agent_Weekly_Payroll__c/fields/Total_First_Payment_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_First_Payment_Collected__c</fullName>
    <label>Total First Payment Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>