docs/sf-export/sfdx-raw/objects/Agent_Weekly_Payroll__c/fields/Total_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payout_Amount__c</fullName>
    <label>Total Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>