docs/sf-export/sfdx-raw/objects/Agent_Weekly_Payroll__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>