docs/sf-export/sfdx-raw/objects/Agent_Weekly_Payroll__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closer__c</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Debt_Amount__c</columns>
    <columns>Calculation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>